# doomfx-vst

./: .gitignore  CMakeLists.txt  README.md
Source/: Main.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
docs/: doomfx.arch.md  doomfx.epics.md  doomfx.prd.md
